2014-09-27  Ken Brown  <kbrown@cornell.edu>

	Fix implementation of HYBRID_MALLOC on Cygwin.
	* sheap.c (bss_sbrk_buffer_end): Cast to void *.
	(bss_sbrk_buffer_beg): New variable.  Use it...
	* gmalloc.c (ALLOCATED_BEFORE_DUMPING) [CYGWIN]: ...here, to fix
	incorrect definition.

2014-09-27  Stefan Monnier  <monnier@iro.umontreal.ca>

	* keyboard.c (track-mouse): Rename to internal--track-mouse.
	Make it into a function and change arg to be a function.

	* lisp.mk (lisp): Add elisp-mode.elc.

2014-09-26  Paul Eggert  <eggert@cs.ucla.edu>

	* xfns.c (x_default_scroll_bar_color_parameter):
	Use USE_LOCAL_ALLOCA only if USE_TOOLKIT_SCROLL_BARS,
	to pacify --enable-gcc-warnings in non-scrollbar builds.

2014-09-26  Ken Brown  <kbrown@cornell.edu>

	* w32term.h (ALIGN_STACK): Fix the cpp condition.

2014-09-25  Eli Zaretskii  <eliz@gnu.org>

	* lisp.h (USE_STACK_LISP_OBJECTS): Default to false for 32-bit
	MinGW builds that use GCC before 4.2.

	Default to stack objects on DOS_NT platforms as well.
	* w32term.h (ALIGN_STACK) [__GNUC__]: Define to
	__attribute__((force_align_arg_pointer)) for GCC 4.2 and later.

	* lisp.h (USE_STACK_LISP_OBJECTS): Remove the !DOS_NT condition.

	* w32proc.c (enum_locale_fn, enum_codepage_fn): Add the
	ALIGN_STACK attribute.

	* w32fns.c (w32_monitor_enum): Add the ALIGN_STACK attribute.

	* w32uniscribe.c (add_opentype_font_name_to_list): Add the
	ALIGN_STACK attribute.

	* w32font.c (add_font_name_to_list, add_font_entity_to_list)
	(add_one_font_entity_to_list): Add the ALIGN_STACK attribute.

2014-09-25  Martin Rudalics  <rudalics@gmx.at>

	* frame.c (frame_inhibit_resize):
	* widget.c (EmacsFrameResize):
	* window.c (resize_frame_windows, Fset_window_configuration):
	* xdisp.c (expose_frame):
	* xfns.c (x_change_tool_bar_height):
	* xmenu.c (update_frame_menubar):
	* xterm.c (handle_one_xevent, x_new_font, x_set_window_size_1):
	Remove code left dead after 2014-07-27 changes.

2014-09-25  Paul Eggert  <eggert@cs.ucla.edu>
